ps(1): Make '-O' more versatile and predictable
The ps(1) display's list of columns is now first built without taking
into account the '-O' options.  In a second step, all columns passed via
'-O' are finally inserted after the built-so-far display's first PID
column (if it exists, else at start), in their order of appearance as
arguments to the '-O' options.

This new two-step procedure suppresses the following undesirable
behaviors:
- '-O' used to insert the columns of the default display even if the
  user also passed other options to request specific columns.
- Each occurence of '-O' beyond the first would just insert the passed
  keywords after those requested by the previous options, as if by '-o',
  inconsistently with the behavior for the first occurence.

These behaviors had more annoying consequences:
- Where the columns of some '-O' occurence appear in the display used to
  depend on the actual position of '-O' with respect to other options,
  despite the natural expectation that they should go near a single PID
  column considered as an anchor regardless of other options adding
  columns.
- Columns specified with multiple '-O' options would not be grouped
  together.
- It used to be impossible to specify custom headers but for the last
  column for columns that are next to each other (i.e., specified by
  a single '-O' occurence).
which are now all lifted.

With these changes, '-O' can still be used alone to amend the default
display, but can now be used also in conjunction with any specific
display, and in particular "canned" ones invoked by '-j', '-l', '-u' or
'-v'.

******

This part discusses other ps(1) implementations' behaviors and compares
them to the one established by this change.

NetBSD seems to be the only other BSD having refined the meaning of
ps(1)'s '-O' option.  While the behavior there is similar to the new one
here on the surface, it differs on the following points:
1. If no options requesting a specific display are present before the


--- a/bin/ps/ps.1
+++ b/bin/ps/ps.1
@@ -127,9 +127,7 @@ First, options
 .Fl o
 and
 .Fl O
-add columns with data corresponding to the explicitly passed keywords and, for
-.Fl O ,
-additionally the same columns as in the default display.
+add columns with data corresponding to the explicitly passed keywords.
 Available keywords are documented in the
 .Sx KEYWORDS
 section below.
@@ -323,15 +321,15 @@ terminal and process ID.
 Extract the name list from the specified system instead of the default,
 which is the kernel image the system has booted from.
 .It Fl O
-On first occurence, add all columns of the default display
-.Po
-as if by
-.Fl o
-.Pc
-and insert just after the process ID column in that default display the columns
-associated with the passed space- or comma-separated list of keywords.
-On next occurences, just insert the keywords of the passed list, as if by
-.Fl o .
+Save passed columns in a separate list that in the end is grafted just after the
+display's first occurence of the process ID column as specified by other
+options, or the default display if there is none.
+If the display prepared by other options does not include a process ID column,
+the list is inserted at start of the display.
+Further occurences of
+.Fl O
+append to the to-be-grafted list of columns.
+This option takes a space- or comma-separated list of keywords.
 The last keyword in the list may be appended with an equals sign
 .Pq Ql =
 as explained for option
@@ -1022,15 +1020,6 @@ Finally, no other
 implementation (for other BSDs, illumos or Linux) behaves like this.
 For all these reasons, the behavior is expected to be changed soon to using the
 effective user ID instead.
-.Pp
-Option
-.Fl O
-has not been designed to be combined with other options as it forces insertion
-of the default display on first occurence.
-Moreover, these default display's columns are then not considered for duplicate
-elimination, contrary to those of canned displays.
-Finally, columns requested through multiple occurences are not grouped together,
-as one may naturally expect.
 .Pp
 The
 .Fl a
