build(7): Document KERNBUILDDIR
KERNBUILDDIR is used by kmod.mk to find the opt_*.h when matching a
kernel to the module. Usually one doesn't need this nob (since most
modules are option invariant or default to the default options everyone
uses), but there are times this generalization doesn't hold.

Sponsored by:		Netflix

--- a/share/man/man7/build.7
+++ b/share/man/man7/build.7
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd February 3, 2025
+.Dd March 8, 2025
 .Dt BUILD 7
 .Os
 .Sh NAME
@@ -554,6 +554,13 @@ Overrides which kernel to build and install for the various kernel
 make targets.
 It defaults to
 .Cm GENERIC .
+.It Va KERNBUILDDIR
+Overrides the default directory to get all the opt_*.h files for
+building a kernel module.
+Useful for stand-alone modules that depend on
+.Xr config 8
+options.
+Automatically set for modules built with a kernel.
 .It Va KERNCONFDIR
 Overrides the directory in which
 .Va KERNCONF
