procstat.1: document rlimitusage
(cherry picked from commit 82897058342e9bfe7193283421055e3f07ac9b8f)

--- a/usr.bin/procstat/procstat.1
+++ b/usr.bin/procstat/procstat.1
@@ -205,6 +205,8 @@ Display LWP info for the process pertaining to its signal driven exit.
 Display current working directory for the process.
 .It Ar rlimit | Fl l
 Display resource limits for the process.
+.It Ar rlimitusage
+Display the usage of the resource limits for the process.
 .It Ar rusage | Fl r
 Display resource usage information for the process.
 .Pp
