ps(1): Remove not-explicitly-requested columns with duplicate data
Before this change, when stacking up more columns in the display through
command-line options, if user requested to add some "canned" display
(through options '-j', '-l', '-u' or '-v'), columns in it that were
"duplicates" of already requested ones (meaning that they share the same
keyword, regardless of whether their headers have been customized) were
in the end omitted.

However, this mechanism did not work the other way around, i.e.,
requesting some canned display(s) first and then adding some columns
that are duplicates (through '-o' or '-O') would not remove them from
the canned display.  Additionally, it did not take into account keyword
aliases (which also lead to displaying the same information).

This whole mechanism of removing columns from requested canned displays
when there are duplicates is useful in a number of scenarios:
1. When one wants the columns of a canned display, but with some of them
   in a different order and at the edges of the bulk.  This needs the
   change here to move columns after the bulk (previously, only moving
   them before the bulk would work).
2. To combine multiple canned displays to get more information without
   repeating common columns. This part has been working before and
   this behavior is unchanged.
3. In combination with requesting a canned display and additional
   columns after it, ensure that a single COMMAND column appears at the
   end of the display (to benefit from the fact that a last COMMAND
   column can extend further to the right).

Point 2 above implies that, when multiple canned displays are requested,
we should keep the leftmost column with same keyword.  However, columns
requested explicitly by '-o' have priority (as the natural extension of
point 1's behavior before this change), and in this case all matching
columns in canned displays must be suppressed.

To this end, when adding requested options to the display's list, we
stop tryi

--- a/bin/ps/ps.1
+++ b/bin/ps/ps.1
@@ -142,11 +142,16 @@ and
 designate specific predefined groups of columns, also called canned displays.
 Appearance of any of these options inhibits the default display, replacing it
 all with the requested columns, and in the order options are passed.
-The individual columns requested via a canned display option which have the same
-keyword as that of some column added by earlier options are not added again.
-This kind of automatic removal of duplicate keywords in canned displays is
-useful for slightly tweaking these displays without having to rebuild variants
-from scratch, e.g., using
+The individual columns requested via a canned display option that have the same
+keyword or an alias to that of some column added by an earlier canned display
+option, or by an explicit
+.Fl O
+or
+.Fl o
+option anywhere on the command line, are suppressed.
+This automatic removal of duplicate data in canned displays is useful for
+slightly tweaking these displays and/or combining multiple ones without having
+to rebuild variants from scratch, e.g., using only
 .Fl o
 options.
 .Pp
@@ -1026,14 +1031,6 @@ Moreover, these default display's columns are then not considered for duplicate
 elimination, contrary to those of canned displays.
 Finally, columns requested through multiple occurences are not grouped together,
 as one may naturally expect.
-.Pp
-Automatic removal of duplicate columns from canned displays only works backwards
-at time of insertion, i.e., adding a new canned display will lead to checking
-columns before it but not those after it.
-Besides the inconsistency, this prevents relocating columns of canned displays
-further right, which can be useful, e.g., to relocate a column with the
-.Cm command
-keyword at end of display.
 .Pp
 The
 .Fl a
