--- a/share/man/man4/man4.aarch64/rk_grf_gpio.4
+++ b/share/man/man4/man4.aarch64/rk_grf_gpio.4
@@ -1,16 +1,14 @@
 .\"
-.\" SPDX-License-Identifier: BSD-2-Clause
-.\"
 .\" Copyright (c) 2025 Stephen Hurd <shurd@freebsd.org>
 .\"
-.Dd Mar 16, 2025
+.\" SPDX-License-Identifier: BSD-2-Clause
+.\"
+.Dd March 18, 2025
 .Dt RK_GRF_GPIO 4
 .Os
 .Sh NAME
 .Nm rk_grf_gpio
-.Nd 
-.Xr gpio 3
-driver for RockChip GPIO_MUTE pin
+.Nd RockChip GPIO_MUTE pin driver
 .Sh SYNOPSIS
 .Cd "options SOC_ROCKCHIP_rk3328"
 .Sh DESCRIPTION
@@ -18,8 +16,8 @@ The
 .Nm
 driver provides a single-pin, output-only
 .Xr gpio 3
-unit whose single pin is named GPIO_MUTE.  This controls the output
-of the GPIO_MUTE pin on the SoC.
+unit whose single pin is named GPIO_MUTE.
+This controls the output of the GPIO_MUTE pin on the SoC.
 .Pp
 This gpio is usually used to control another device on the board,
 so is not usually available for user software.
