--- a/share/man/man5/rc.conf.5
+++ b/share/man/man5/rc.conf.5
@@ -22,7 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 6, 2025
+.Dd March 20, 2025
 .Dt RC.CONF 5
 .Os
 .Sh NAME
@@ -4992,6 +4992,8 @@ of protocol stacks that have not had jail functionality added
 to them.
 .It nfsd
 Allows to run nfsd and affiliated daemons.
+.It settime
+Allows to set and slew the system time.
 .It sysvipc
 Inherits the SysV semaphores, SysV shared memory and
 SysV messages from the host or the parent jail.
