jail: add allow.routing jail permission
if allow.routing is set, the jail can modify the system routing table even if
it's not a VNET jail.

--- a/usr.sbin/jail/jail.8
+++ b/usr.sbin/jail/jail.8
@@ -674,6 +674,9 @@ For example through utilities like
 .Xr date 1 .
 This permission includes also
 .Va allow.adjtime .
+.It Va allow.routing
+Allow privileged process in the non-VNET jail to modify the system routing
+table.
 .El
 .El
 .Pp
