intro.5: Crossreference ascii(7)
Since the beginning, Unix has included an ASCII chart. Over the last
half a century to this day, the most common format for lexographical
organization in files is according to ASCII. Consistency is maintainable
and for that reason, crossreference ascii(7) promenently in the
introduction to the File Formats Manual. Additionally, this demonstrates
the often softer style of bullet lists in the manual tradition.

PR:		248562
MFC after:	3 days
Reviewed by:	mhorne
Approved by:	mhorne (mentor)
Pull Request:	https://github.com/freebsd/freebsd-src/pull/1534

(cherry picked from commit a6175f28da7018ba9f824f48fe6db732bd9cb501)

--- a/share/man/man5/intro.5
+++ b/share/man/man5/intro.5
@@ -42,11 +42,12 @@ environment, including:
 .Pp
 .Bl -bullet -compact
 .It
-ASCII configuration and resource files
+.Xr ascii 7
+configuration and resource files
 .It
-System binary file and stream structures
+system binary file and stream structures
 .It
-Composition of database files
+composition of database files
 .El
 .Sh FILES
 .Bl -tag -width "/usr/local/etc/" -compact
