aio_*(2): mention ENOSYS under ERRORS
ENOSYS can occur if aio(4) is not loaded in the kernel. Document this
behavior so consumers on FreeBSD can better understand that this is a
possible scenario.

Clean up the manpages slightly while here:
- Sort `ERRORS` by errno(3).
- Use `.Fx` instead of `FreeBSD`.

MFC after:	2 weeks
Reviewed by:	ziaee
PR:		190942
Differential Revision: https://reviews.freebsd.org/D49502

--- a/lib/libsys/aio_error.2
+++ b/lib/libsys/aio_error.2
@@ -72,6 +72,13 @@ The
 .Fa iocb
 argument
 does not reference an outstanding asynchronous I/O request.
+.It Bq Er ENOSYS
+The
+.Fn aio_error
+system call is not supported.
+This can occur if
+.Xr aio 4
+support is not present.
 .El
 .Sh SEE ALSO
 .Xr aio_cancel 2 ,
