--- a/lib/libsys/aio_read.2
+++ b/lib/libsys/aio_read.2
@@ -173,6 +173,13 @@ points outside the process's allocated address space.
 The asynchronous notification method in
 .Fa iocb->aio_sigevent.sigev_notify
 is invalid or not supported.
+.It Bq Er ENOSYS
+The
+.Fn aio_read
+system call is not supported.
+This can occur if
+.Xr aio 4
+support is not present.
 .It Bq Er EOPNOTSUPP
 Asynchronous read operations on the file descriptor
 .Fa iocb->aio_fildes
@@ -263,7 +270,9 @@ The
 .Fn aio_read2
 and
 .Fn aio_readv
-system calls are FreeBSD extensions,
+system calls are
+.Fx
+extensions,
 and should not be used in portable code.
 .Sh HISTORY
 The
