--- a/lib/libsys/aio_write.2
+++ b/lib/libsys/aio_write.2
@@ -182,6 +182,13 @@ points outside the process's allocated address space.
 The asynchronous notification method in
 .Fa iocb->aio_sigevent.sigev_notify
 is invalid or not supported.
+.It Bq Er ENOSYS
+The
+.Fn aio_write
+system call is not supported.
+This can occur if
+.Xr aio 4
+support is not present.
 .It Bq Er EOPNOTSUPP
 Asynchronous write operations on the file descriptor
 .Fa iocb->aio_fildes
@@ -265,7 +272,9 @@ The
 .Fn aio_write2
 and
 .Fn aio_writev
-system calls are FreeBSD extensions,
+system calls are
+.Fx
+extensions,
 and should not be used in portable code.
 .Sh HISTORY
 The
