top: Sync usage and synopsis
Switching between io and cpu sorting uses a great example in the usage.
[-m io | cpu]. Use that everywhere.

MFC after:		3 days
Reviewed by:		mhorne
Approved by:		mhorne (mentor)
Differential Revision:	https://reviews.freebsd.org/D49515

--- a/usr.bin/top/top.1
+++ b/usr.bin/top/top.1
@@ -6,10 +6,10 @@
 .Nd display and update information about the top cpu processes
 .Sh SYNOPSIS
 .Nm
-.Op Fl abCHIijnPpqSTtuvxz
+.Op Fl abCHIijnPqSTtuvwz
 .Op Fl d Ar count
 .Op Fl J Ar jail
-.Op Fl m Ar mode
+.Op Fl m Ar cpu | io
 .Op Fl o Ar field
 .Op Fl p Ar pid
 .Op Fl s Ar time
