hier.7:	Storage partitions are not filesystems
I recommended the incorrect text to the submitter.

MFC after:		3 days
Fixes:			f47cbb29e1c2 (Add /dev/gpt)
Reported by:		Mark Millard <marklmi@yahoo.com>
Reviewed by:		imp, mhorne
Approved by:		mhorne (mentor)
Differential Revision:	https://reviews.freebsd.org/D49523

--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -157,7 +157,7 @@ file descriptor files; see
 .It Pa fd0
 first floppy drive
 .It Pa gpt/
-filesystems by GPT label
+storage partitions by GPT label
 .It Pa mmcsd0
 first SD storage device
 .It Pa mmcsd0s1
