procstat.1: correct local socket types descriptions.
Datagram/Stream sockets are similar to, but are not TCP/UDP sockets.

Reviewed by:	markj
Sponsored by:	The FreeBSD Foundation
MFC after:	1 week
Differential revision:	https://reviews.freebsd.org/D49525

--- a/usr.bin/procstat/procstat.1
+++ b/usr.bin/procstat/procstat.1
@@ -479,13 +479,9 @@ see
 .Pp
 .Bl -tag -width indent -compact
 .It UDD
-.Dv IPPROTO_UDP ;
-see
-.Xr udp 4 .
+Datagram socket.
 .It UDS
-.Dv IPPROTO_TCP ;
-see
-.Xr tcp 4 .
+Stream socket.
 .It UD?
 unknown protocol.
 .El
