pci: Clear active PME# and disable PME# generation
The PCI power management specification requires that the OS clear any
pending PME# interrupt and generation of PME# interrupts during
"initial operating system load".  Note that clearing a pending PME#
interrupt requires writing a 1 to the Read/Write-Clear PME bit in the
power management status register.  To handle the boot time case, clear
PME# state in pci_read_cap() when scanning new PCI devices.  This
should also cover hotplug devices.

In addition, clear this state on every PCI device after resume from
sleep in pci_resume_child before invoking the driver's DEVICE_RESUME
method.

Reviewed by:	imp
Differential Revision:	https://reviews.freebsd.org/D49222

--- a/share/man/man9/pci.9
+++ b/share/man/man9/pci.9
@@ -30,6 +30,7 @@
 .Nm pci ,
 .Nm pci_alloc_msi ,
 .Nm pci_alloc_msix ,
+.Nm pci_clear_pme ,
 .Nm pci_disable_busmaster ,
 .Nm pci_disable_io ,
 .Nm pci_enable_busmaster ,
@@ -81,6 +82,8 @@
 .Fn pci_alloc_msi "device_t dev" "int *count"
 .Ft int
 .Fn pci_alloc_msix "device_t dev" "int *count"
+.Ft void
+.Fn pci_clear_pme "device_t dev"
 .Ft int
 .Fn pci_disable_busmaster "device_t dev"
 .Ft int
@@ -668,6 +671,11 @@ it does not support the specific power state
 .Fa state ,
 then the function will fail with
 .Er EOPNOTSUPP .
+.Pp
+The
+.Fn pci_clear_pme
+function is used to clear any pending PME# signal and disable generation
+of power management events.
 .Pp
 The
 .Fn pci_iov_attach
