--- a/share/man/man4/bridge.4
+++ b/share/man/man4/bridge.4
@@ -36,7 +36,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd April 10, 2024
+.Dd April 2, 2025
 .Dt IF_BRIDGE 4
 .Os
 .Sh NAME
@@ -50,8 +50,8 @@ kernel configuration file:
 .Cd "device if_bridge"
 .Ed
 .Pp
-Alternatively, to load the driver as a
-module at boot time, place the following lines in
+Alternatively, to load the driver as a module at boot time, place the
+following lines in
 .Xr loader.conf 5 :
 .Bd -literal -offset indent
 if_bridge_load="YES"
@@ -60,18 +60,18 @@ bridgestp_load="YES"
 .Sh DESCRIPTION
 The
 .Nm
-driver creates a logical link between two or more IEEE 802 networks
-that use the same (or
+driver creates a logical link between two or more IEEE 802 networks that
+use the same (or
 .Dq "similar enough" )
 framing format.
-For example, it is possible to bridge Ethernet and 802.11 networks together,
-but it is not possible to bridge Ethernet and Token Ring together.
+For example, it is possible to bridge Ethernet and 802.11 networks
+together, but it is not possible to bridge Ethernet and Token Ring
+together.
 .Pp
 Each
 .Nm
 interface is created at runtime using interface cloning.
-This is
-most easily done with the
+This is most easily done with the
 .Xr ifconfig 8
 .Cm create
 command or using the
@@ -81,8 +81,8 @@ variable in
 .Pp
 The
 .Nm
-interface randomly chooses a link (MAC) address in the range reserved for
-locally administered addresses when it is created.
+interface randomly chooses a link (MAC) address in the range reserved
+for locally administered addresses when it is created.
 This address is guaranteed to be unique
 .Em only
 across all
@@ -112,12 +112,13 @@ by default.
 A bridge can be used to provide several services, such as a simple
 802.11-to-Ethernet bridge for wireless hosts, or traffic isolation.
 .Pp
-A bridge works like a switch, forwarding traffic from one interface
-to another.
-Multicast and broadcast packets are always forwarded to all
-interfaces that are part of the bridge.
-For unicast traffic, the bridge learns which MAC addresses are associated
-with which interfaces and will forward the traffic selectively.
+A bridge works like a switch, forwarding traffic from one interface to
+another.
+Multicast and broadcast packets are always forwarded to all interfaces
+that are part of the bridge.
+For unicast traffic, the bridge learns which MAC addresses are
+associated with which interfaces and will forward the traffic
+selectively.
 .Pp
 By default the bridge logs MAC address port flapping to
 .Xr syslog 3 .
@@ -128,8 +129,8 @@ variable
 to
 .Li 0 .
 .Pp
-All the bridged member interfaces need to be up
-in order to pass network traffic.
+All the bridged member interfaces need to be up in order to pass network
+traffic.
 These can be enabled using
 .Xr ifconfig 8
 or
@@ -137,15 +138,18 @@ or
 in
 .Xr rc.conf 5 .
 .Pp
-The MTU of the first member interface to be added is used as the bridge MTU.
+The MTU of the first member interface to be added is used as the bridge
+MTU.
 All additional members will have their MTU changed to match.
-If the MTU of a bridge is changed after its creation, the MTU of all member
-interfaces is also changed to match.
+If the MTU of a bridge is changed after its creation, the MTU of all
+member interfaces is also changed to match.
 .Pp
-The TOE, TSO, TXCSUM and TXCSUM6 capabilities on all interfaces added to the
-bridge are disabled if any of the interfaces do not support/enable them.
+The TOE, TSO, TXCSUM and TXCSUM6 capabilities on all interfaces added to
+the bridge are disabled if any of the interfaces do not support/enable
+them.
 The LRO capability is always disabled.
-All the capabilities are restored when the interface is removed from the bridge.
+All the capabilities are restored when the interface is removed from the
+bridge.
 Changing capabilities at run-time may cause NIC reinit and a link flap.
 .Pp
 The bridge supports
@@ -153,11 +157,12 @@ The bridge supports
 where the packets are discarded after
 .Xr bpf 4
 processing, and are not processed or forwarded further.
-This can be used to multiplex the input of two or more interfaces into a single
+This can be used to multiplex the input of two or more interfaces into a
+single
 .Xr bpf 4
 stream.
-This is useful for reconstructing the traffic for network taps
-that transmit the RX/TX signals out through two separate interfaces.
+This is useful for reconstructing the traffic for network taps that
+transmit the RX/TX signals out through two separate interfaces.
 .Sh IPV6 SUPPORT
 .Nm
 supports the
@@ -176,8 +181,8 @@ However, the
 .Li AF_INET6
 address family has a concept of scope zone.
 Bridging multiple interfaces changes the zone configuration because
-multiple links are merged to each other and form a new single link
-while the member interfaces still work individually.
+multiple links are merged to each other and form a new single link while
+the member interfaces still work individually.
 This means each member interface still has a separate link-local scope
 zone and the
 .Nm
@@ -188,16 +193,16 @@ This situation is clearly against the description
 in Section 5,
 RFC 4007.
 Although it works in most cases,
-it can cause some counterintuitive or undesirable behavior in some
-edge cases when both, the
+it can cause some counterintuitive or undesirable behavior in some edge
+cases when both the
 .Nm
-interface and one of the member interfaces, have an IPv6 address
+interface and one of the member interfaces have an IPv6 address
 and applications use both of them.
 .Pp
 To prevent this situation,
 .Nm
-checks whether a link-local scoped IPv6 address is configured on
-a member interface to be added and the
+checks whether a link-local scoped IPv6 address is configured on a
+member interface to be added and the
 .Nm
 interface.
 When the
@@ -232,14 +237,14 @@ driver implements the Rapid Spanning Tree Protocol (RSTP or 802.1w) with
 backwards compatibility with the legacy Spanning Tree Protocol (STP).
 Spanning Tree is used to detect and remove loops in a network topology.
 .Pp
-RSTP provides faster spanning tree convergence than legacy STP, the protocol
-will exchange information with neighbouring switches to quickly transition to
-forwarding without creating loops.
+RSTP provides faster spanning tree convergence than legacy STP, the
+protocol will exchange information with neighbouring switches to quickly
+transition to forwarding without creating loops.
 .Pp
-The code will default to RSTP mode but will downgrade any port connected to a
-legacy STP network so is fully backward compatible.
-A bridge can be forced to operate in STP mode without rapid state transitions
-via the
+The code will default to RSTP mode but will downgrade any port connected
+to a legacy STP network so is fully backward compatible.
+A bridge can be forced to operate in STP mode without rapid state
+transitions via the
 .Va proto
 command in
 .Xr ifconfig 8 .
@@ -250,13 +255,38 @@ by setting the
 .Va net.link.bridge.log_stp
 node using
 .Xr sysctl 8 .
+.Sh VLAN SUPPORT
+The
+.Nm
+driver has limited support for virtual LANs (VLANs).
+An incoming packet with an 802.1Q tag will be assigned to the
+appropriate VLAN.
+An interface's Port VLAN ID (PVID, sometimes called native VLAN ID) may
+be configured using the
+.Xr ifconfig 8
+.Cm ifpvid
+option; incoming packets with no 802.1Q tag (or where the VLAN ID in the
+tag is zero) will be assigned to the interface's PVID.
+.Pp
+An interface without a PVID configured will receive frames for all
+VLANs.
+An interface with a PVID configured will only receive frames for its
+configured PVID.
+In either case, if the incoming frame has an 802.1Q tag, the tag will be
+preserved in the output frame; if not, no tag will be added to the
+output frame.
+.Pp
+There is no support for adding or removing 802.1Q tags on outgoing
+frames, and for interfaces without a PVID configured, there is no way to
+restrict which VLANs the interface can send or receive frames for.
 .Sh PACKET FILTERING
-Packet filtering can be used with any firewall package that hooks in via the
+Packet filtering can be used with any firewall package that hooks in via
+the
 .Xr pfil 9
 framework.
 When filtering is enabled, bridged packets will pass through the filter
-inbound on the originating interface, on the bridge interface and outbound on
-the appropriate interfaces.
+inbound on the originating interface, on the bridge interface and
+outbound on the appropriate interfaces.
 Either stage can be disabled.
 The filtering behavior can be controlled using
 .Xr sysctl 8 :
@@ -279,14 +309,14 @@ to disable it.
 .It Va net.link.bridge.pfil_bridge
 Set to
 .Li 1
-to enable filtering on the bridge interface, set
-to
+to enable filtering on the bridge interface, set to
 .Li 0
 to disable it.
 .It Va net.link.bridge.pfil_local_phys
 Set to
 .Li 1
-to additionally filter on the physical interface for locally destined packets.
+to additionally filter on the physical interface for locally destined
+packets.
 Set to
 .Li 0
 to disable this feature.
@@ -307,8 +337,8 @@ is enabled,
 .Va pfil_bridge
 and
 .Va pfil_member
-will be disabled so that IPFW
-is not run twice; these can be re-enabled if desired.
+will be disabled so that IPFW is not run twice; these can be re-enabled
+if desired.
 .It Va net.link.bridge.ipfw_arp
 Set to
 .Li 1
@@ -328,38 +358,34 @@ that are not IP nor IPv6 packets are not forwarded when
 is enabled.
 IPFW can filter Ethernet types using
 .Cm mac-type
-so all packets are passed to
-the filter for processing.
+so all packets are passed to the filter for processing.
 .Pp
-The packets originating from the bridging host will be seen by
-the filter on the interface that is looked up in the routing
-table.
+The packets originating from the bridging host will be seen by the
+filter on the interface that is looked up in the routing table.
 .Pp
-The packets destined to the bridging host will be seen by the filter
-on the interface with the MAC address equal to the packet's destination
+The packets destined to the bridging host will be seen by the filter on
+the interface with the MAC address equal to the packet's destination
 MAC.
-There are situations when some of the bridge members are sharing
-the same MAC address (for example the
+There are situations when some of the bridge members are sharing the
+same MAC address (for example the
 .Xr vlan 4
-interfaces: they are currently sharing the
-MAC address of the parent physical interface).
-It is not possible to distinguish between these interfaces using
-their MAC address, excluding the case when the packet's destination
-MAC address is equal to the MAC address of the interface on which
-the packet was entered to the system.
-In this case the filter will see the incoming packet on this
-interface.
+interfaces: they are currently sharing the MAC address of the parent
+physical interface).
+It is not possible to distinguish between these interfaces using their
+MAC address, excluding the case when the packet's destination MAC
+address is equal to the MAC address of the interface on which the packet
+was entered to the system.
+In this case the filter will see the incoming packet on this interface.
 In all other cases the interface seen by the packet filter is chosen
-from the list of bridge members with the same MAC address and the
-result strongly depends on the member addition sequence and the
-actual implementation of
+from the list of bridge members with the same MAC address and the result
+strongly depends on the member addition sequence and the actual
+implementation of
 .Nm .
 It is not recommended to rely on the order chosen by the current
 .Nm
 implementation since it may change in the future.
 .Pp
-The previous paragraph is best illustrated with the following
-pictures.
+The previous paragraph is best illustrated with the following pictures.
 Let
 .Bl -bullet
 .It
@@ -376,8 +402,8 @@ MAC address is
 there are possibly other bridge members with the same MAC address
 .Nm xx:xx:xx:xx:xx:xx ,
 .It
-the bridge has more than one interface that are sharing the
-same MAC address
+the bridge has more than one interface that are sharing the same MAC
+address
 .Nm yy:yy:yy:yy:yy:yy ;
 we will call them
 .Nm vlanY1 ,
@@ -391,28 +417,28 @@ is equal to
 .Nm xx:xx:xx:xx:xx:xx
 the filter will see the packet on interface
 .Nm ifX
-no matter if there are any other bridge members carrying the same
-MAC address.
+no matter if there are any other bridge members carrying the same MAC
+address.
 But if the MAC address
 .Nm nn:nn:nn:nn:nn:nn
 is equal to
 .Nm yy:yy:yy:yy:yy:yy
 then the interface that will be seen by the filter is one of the
 .Nm vlanYn .
-It is not possible to predict the name of the actual interface
-without the knowledge of the system state and the
+It is not possible to predict the name of the actual interface without
+the knowledge of the system state and the
 .Nm
 implementation details.
 .Pp
-This problem arises for any bridge members that are sharing the same
-MAC address, not only to the
+This problem arises for any bridge members that are sharing the same MAC
+address, not only to the
 .Xr vlan 4
 ones: they were taken just as an example of such a situation.
-So if one wants to filter the locally destined packets based on
-their interface name, one should be aware of this implication.
+So if one wants to filter the locally destined packets based on their
+interface name, one should be aware of this implication.
 The described situation will appear at least on the filtering bridges
-that are doing IP-forwarding; in some of such cases it is better
-to assign the IP address only to the
+that are doing IP-forwarding; in some of such cases it is better to
+assign the IP address only to the
 .Nm
 interface and not to the bridge members.
 Enabling
@@ -428,18 +454,19 @@ member interface will be received by the netmap application.
 .Pp
 When the
 .Xr netmap 4
-application transmits a packet to the host stack via the bridge interface,
+application transmits a packet to the host stack via the bridge
+interface,
 .Nm
 receive it and attempts to determine its
 .Ql source
-interface by looking up the source MAC address in the interface's learning
-tables.
-Packets for which no matching source interface is found are dropped and the
-input error counter is incremented.
+interface by looking up the source MAC address in the interface's
+learning tables.
+Packets for which no matching source interface is found are dropped and
+the input error counter is incremented.
 If a matching source interface is found,
 .Nm
-treats the packet as though it was received from the corresponding interface
-and handles it normally without passing the packet back to
+treats the packet as though it was received from the corresponding
+interface and handles it normally without passing the packet back to
 .Xr netmap 4 .
 .Sh EXAMPLES
 The following when placed in the file
@@ -452,8 +479,8 @@ and
 .Dq Li fxp0
 to the bridge, and then enable packet forwarding.
 Such a configuration could be used to implement a simple
-802.11-to-Ethernet bridge (assuming the 802.11 interface is
-in ad-hoc mode).
+802.11-to-Ethernet bridge (assuming the 802.11 interface is in ad-hoc
+mode).
 .Bd -literal -offset indent
 cloned_interfaces="bridge0"
 ifconfig_bridge0="addm wlan0 addm fxp0 up"
@@ -469,8 +496,8 @@ ifconfig_fxp0="up"
 .Ed
 .Pp
 Consider a system with two 4-port Ethernet boards.
-The following will cause a bridge consisting of all 8 ports with
-Rapid Spanning Tree enabled to be created:
+The following will cause a bridge consisting of all 8 ports with Rapid
+Spanning Tree enabled to be created:
 .Bd -literal -offset indent
 ifconfig bridge0 create
 ifconfig bridge0 \e
@@ -485,10 +512,10 @@ ifconfig bridge0 \e
     up
 .Ed
 .Pp
-The bridge can be used as a regular host interface at the same time as bridging
-between its member ports.
-In this example, the bridge connects em0 and em1, and will receive its IP
-address through DHCP:
+The bridge can be used as a regular host interface at the same time as
+bridging between its member ports.
+In this example, the bridge connects em0 and em1, and will receive its
+IP address through DHCP:
 .Bd -literal -offset indent
 cloned_interfaces="bridge0"
 ifconfig_bridge0="addm em0 addm em1 DHCP"
@@ -503,8 +530,8 @@ This can be combined with
 to provide an encrypted connection.
 Create a
 .Xr gif 4
-interface and set the local and remote IP addresses for the
-tunnel, these are reversed on the remote bridge.
+interface and set the local and remote IP addresses for the tunnel,
+these are reversed on the remote bridge.
 .Bd -literal -offset indent
 ifconfig gif0 create
 ifconfig gif0 tunnel 1.2.3.4 5.6.7.8 up
@@ -529,8 +556,8 @@ The
 .Nm bridge
 driver was originally written by
 .An Jason L. Wright Aq Mt jason@thought.net
-as part of an undergraduate independent study at the University of
-North Carolina at Greensboro.
+as part of an undergraduate independent study at the University of North
+Carolina at Greensboro.
 .Pp
 This version of the
 .Nm
@@ -543,5 +570,5 @@ Rapid Spanning Tree Protocol (RSTP) support was added by
 The
 .Nm
 driver currently supports only Ethernet and Ethernet-like (e.g., 802.11)
-network devices, which can be configured with the same MTU size as the bridge
-device.
+network devices, which can be configured with the same MTU size as the
+bridge device.
