--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -22,7 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 4, 2022
+.Dd April 2, 2025
 .Dt PCI 4
 .Os
 .Sh NAME
@@ -372,16 +372,18 @@ The input parameters and results are passed in the
 .Va pci_bar_mmap
 structure, which has the following fields:
 .Bl -tag -width Vt struct pcise pbm_sel
-.It Vt uint64_t	pbm_map_base
+.It Vt void *pbm_map_base
 Reports the established mapping base to the caller.
 If
 .Va PCIIO_BAR_MMAP_FIXED
 flag was specified, then this field must be filled before the call
 with the desired address for the mapping.
-.It Vt uint64_t pbm_map_length
+.It Vt size_t pbm_map_length
 Reports the mapped length of the BAR, in bytes.
-Its .Vt uint64_t value is always multiple of machine pages.
-.It Vt int64_t pbm_bar_length
+Its
+.Vt size_t
+value is always multiple of machine pages.
+.It Vt uint64_t pbm_bar_length
 Reports length of the bar as exposed by the device.
 .It Vt int pbm_bar_off
 Reports offset from the mapped base to the start of the
