--- a/share/man/man4/gve.4
+++ b/share/man/man4/gve.4
@@ -79,6 +79,13 @@ binds to a single PCI device ID presented by gVNIC:
 .It
 0x1AE0:0x0042
 .El
+.Sh EXAMPLES
+.Pp
+Change the TX queue count to 4 for the gve0 interface:
+.D1 sysctl dev.gve.0.num_tx_queues=4
+.Pp
+Change the RX queue count to 4 for the gve0 interface:
+.D1 sysctl dev.gve.0.num_rx_queues=4
 .Sh DIAGNOSTICS
 The following messages are recorded during driver initialization:
 .Bl -diag
@@ -211,6 +218,18 @@ The default value is 0, which means hardware LRO is enabled by default.
 The software LRO stack in the kernel is always used.
 This sysctl variable needs to be set before loading the driver, using
 .Xr loader.conf 5 .
+.It Va dev.gve.X.num_rx_queues and dev.gve.X.num_tx_queues
+Run-time tunables that represent the number of currently used RX/TX queues.
+The default value is the max number of RX/TX queues the device can support.
+.Pp
+This call turns down the interface while setting up the new queues,
+which may potentially cause any new packets to be dropped.
+This call can fail if the system is not able to provide the driver with enough resources.
+In that situation, the driver will revert to the previous number of RX/TX queues.
+If this also fails, a device reset will be triggered.
+.Pp
+Note: sysctl nodes for queue stats remain available even if a queue is removed.
+.Pp
 .El
 .Sh LIMITATIONS
 .Nm
